--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,33 @@
-### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+# Compiled class file
+*.class
 
-### Eclipse ###
-.apt_generated
+# Log file
+*.log
+
+# Package Files
+*.jar
+*.war
+*.ear
+
+# Maven
+target/
+
+# Gradle
+build/
+
+# Eclipse
 .classpath
-.factorypath
 .project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+.settings/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# IntelliJ IDEA
+.idea/
+*.iml
+*.ipr
+*.iws
 
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
+# NetBeans
+nbproject/private/
+build/
+nbbuild/
+dist/
